feat: 오늘의집 스탠다드 업체 배지를 이미지로 변경
- 텍스트 배지를 스탠다드버튼.png 이미지로 교체

--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
                 <span id="typewriter-2" class="typewriter"></span><span id="cursor-2" class="typewriter-cursor hidden">|</span>
             </p>
 
-            <div id="hero-badge" class="inline-block px-6 py-3 border-2 border-white/50 text-white text-sm tracking-widest opacity-0">
-                오늘의집 스탠다드 업체
+            <div id="hero-badge" class="inline-block opacity-0">
+                <img src="image/스탠다드버튼.png" alt="오늘의집 스탠다드 업체" class="h-12 md:h-14 lg:h-16">
             </div>
         </div>
 
