--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOAR DESIGN | 감성을 품은 하이엔드 인테리어</title>
+    <link rel="icon" type="image/png" href="image/logo.png">
     <meta name="description" content="모아르 디자인 - 감성을 품은 하이엔드 인테리어. 오늘의집 스탠다드 업체.">
 
     <!-- Tailwind CSS -->
@@ -81,6 +82,19 @@
         @keyframes fadeIn {
             from { opacity: 0; }
             to { opacity: 1; }
+        }
+
+        @keyframes logoFloat {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-8px);
+            }
+        }
+
+        .animate-logo-float {
+            animation: logoFloat 3s ease-in-out infinite;
         }
 
         @keyframes bounce {
@@ -185,6 +199,11 @@
 
         <!-- Hero Content -->
         <div class="relative z-10 text-center px-4">
+            <div class="mb-8 opacity-0 animate-fade-in delay-300">
+                <div class="h-20 w-20 md:h-24 md:w-24 mx-auto rounded-2xl bg-black overflow-hidden flex items-center justify-center p-3 shadow-2xl shadow-white/10 animate-logo-float">
+                    <img src="image/logo.png" alt="MOAR DESIGN" class="w-full h-full object-contain">
+                </div>
+            </div>
             <h1 class="text-4xl md:text-6xl lg:text-7xl text-white mb-6 tracking-wide" style="font-family: 'Noto Serif KR', Georgia, serif; font-weight: 500;">
                 <span id="typewriter-1" class="typewriter"></span><span id="cursor-1" class="typewriter-cursor">|</span>
             </h1>
