Revert "fix: 모바일 줌 아웃 시 UI 깨짐 방지"
This reverts commit 4195a95de002c841dcff8cbcee2f7e28c7aeb5f4.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOAR DESIGN | 감성을 품은 하이엔드 인테리어</title>
     <link rel="icon" type="image/png" href="image/logo.png">
     <meta name="description" content="모아르 디자인 - 감성을 품은 하이엔드 인테리어. 오늘의집 스탠다드 업체.">
@@ -39,7 +39,6 @@
 
         body {
             font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, sans-serif;
-            min-width: 320px;
         }
 
         /* Video Background */
@@ -56,10 +55,8 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            width: 100vw;
-            height: 56.25vw; /* 16:9 비율 */
-            min-height: 100vh;
-            min-width: 177.78vh; /* 16:9 비율 역산 */
+            width: 300vw;
+            height: 300vh;
             transform: translate(-50%, -50%);
             pointer-events: none;
         }
